# windows-ec2-cdk

./: .gitignore  .pylintrc  README.md  cdk.json  deploy.sh  destroy.sh  lint.sh  pyproject.toml  tox.ini
cdk/: pyproject.toml
cdk/windows_ec2/: app.py  constants.py  utils.py  windows_ec2_construct.py  windows_ec2_stack.py
cdk/windows_ec2/utils/: utils.py
tests/: pytest.ini
tests/helpers/: cfn_reader.py
tests/unit/: test_dummy.py
utils/: cfn_reader.py  clean_old_key_pairs_for_ec2.py  generate_rdp_file.py
